# non_empty_continuous

./: Cargo.toml  README.md
src/: lib.rs  non_empty_slice.rs  non_empty_smallvec.rs  non_empty_vec.rs
