[package]
name = "non_empty_continuous"
version = "0.1.0"
edition = "2021"
keywords = ["slice", "vector", "smallvec", "collections", "nonempty"]
repository = "https://github.com/DavidO000/non_empty_continuous"
description = "Non-empty continuous collections"
license = "0BSD"

[dependencies]
smallvec = { version = "1.13.2", optional = true }
static_assert_generic = { version = "0.1.0", optional = true }

[features]
smallvec = ["dep:smallvec"]
static_assert_generic = ["dep:static_assert_generic"]