[package]
name = "non_empty_continuous"
version = "0.1.1"
edition = "2021"
keywords = ["slice", "vector", "smallvec", "collections", "nonempty"]
repository = "https://github.com/DavidO000/non_empty_continuous"
description = "Non-empty continuous collections"
license = "0BSD"

[dependencies]
smallvec = { version = "1.13.2", features = ["const_new"], optional = true }

[features]
smallvec = ["dep:smallvec"]